--- a/springboot2-jpa-crud-example/src/main/resources/application.properties
+++ b/springboot2-jpa-crud-example/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 ## H2 Console Configuration
 spring.h2.console.enabled=true
